@@ -13,6 +13,8 @@ Release 1.5-1.1 Start 05/09/2024 End 24/12/2024
 06. Fix errors when using GCC14
 - 06/05/2025
 07. error.c, error.h: added error_invalid for EINVAL
+- 03/10/2025
+08. now.c, tai_now.c: Fixed datatype for argument passed to time()
 
 * Tue Aug 06 2024 12:33:26 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.4-1.1%{?dist}
 Release 1.4-1.1 Start 29/04/2024 End 06/08/2024
